fix alignment deletion css

--- a/track_styles.css
+++ b/track_styles.css
@@ -51,13 +51,13 @@ div.hist {
     background-image: url('img/red_crosshatch_bg.png');
 }
 
-.alignment .mismatch {
+.alignment * {
     height: 100%;
-}
-.alignment .mismatch.base {
 }
 .alignment .deletion {
     background-color: black;
+}
+.alignment .deletion * {
     color: white;
 }
 .alignment .insertion {
